--- a/src/app/clients/client.component.html
+++ b/src/app/clients/client.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-body"  >
         <div  class="row" style="font-size:20px">
-           <div class="text-center" style="font-size:25px">¿No Tienes una cuenta??? <a [routerLink]="['/clientsreg']">Registrate</a></div>
+           <div class="text-center" style="font-size:25px">¿No Tienes una cuenta????? <a [routerLink]="['/clientsreg']">Registrate</a></div>
            <br><br>
            
            <div class="text-center" ><input #email="ngModel" id="email" style="border-color:cyan;border-radius:7px; background-color:lavender" type="text" placeholder="Correo electronico" [(ngModel)]='clients.Email' > </div> 
