--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -7,7 +7,7 @@
         <div class='row'>
             <div class='col-md-6'>
                 <div class='row'>
-                    <div class='col-md-3'>Name:</div>
+                    <div class='col-md-3'>Nameee:</div>
                     <div class='col-md-6'>{{product.platoNombre}}</div>
                 </div>
                 <br>
