--- a/src/app/clients/client.component.html
+++ b/src/app/clients/client.component.html
@@ -9,10 +9,10 @@
            
            <div class="text-center" ><input #email="ngModel" id="email" style="border-color:cyan;border-radius:7px; background-color:lavender" type="text" placeholder="Correo electronico" [(ngModel)]='clients.Email' > </div> 
            <div class="text-center" style="font-size:15px" >
-            Debe escribir el email
+            Por favor, escriba el email
           </div>
           <div class="text-center" style="font-size:15px" >
-            El email debe ser tener 6 caracteres como minimo 
+            El email debe tener 6 caracteres como minimo 
           </div>
            <br>
            <div class="text-center" ><input style="border-color:cyan;border-radius:7px ; background-color:lavender" type="text" placeholder="Contraseña" [(ngModel)]='clients.Password'  > </div> 
